--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Test!
+I am David DeLuca, a person with numerous hobbies and interests. On this site the user can find samples of my writing, art, music, and other artifacts of my existence.
